--- a/comicteca/templates/comics/index.html
+++ b/comicteca/templates/comics/index.html
@@ -7,6 +7,7 @@
     <body>
         <h1>Comicteca says...hello world!</h1>
 
+	<h2><p>Autores:</p></h2>
         {% if artists %}
             <ul>
                 {% for artist in artists %}
@@ -15,6 +16,17 @@
             </ul>
         {% else %}
             <strong>There are no artists present yet.</strong>
+        {% endif %}
+
+	<h2><p>Colecciones:</p></h2>
+        {% if colections %}
+            <ul>
+                {% for colection in colections %}
+                  <li><a href="/comicteca/colection/{{ colection.slug }}">{{ colection.name }}</a></li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <strong>There are no colections present yet.</strong>
         {% endif %}
 
         <a href="/comics/about/">About</a>
