Add a new "add_artist" link in the main "index.html" template

--- a/comicteca/templates/comics/index.html
+++ b/comicteca/templates/comics/index.html
@@ -29,6 +29,7 @@
             <strong>There are no colections present yet.</strong>
         {% endif %}
 
-        <a href="/comics/about/">About</a>
+        <a href="/comicteca/about/">About</a>
+	<a href="/comicteca/add_artist/">Add a New Artist</a><br />
     </body>
 </html>
