Add a new link to the "add colection" view in the index main html

--- a/comicteca/templates/comics/index.html
+++ b/comicteca/templates/comics/index.html
@@ -29,7 +29,9 @@
             <strong>There are no colections present yet.</strong>
         {% endif %}
 
-        <a href="/comicteca/about/">About</a>
+	<hr>
+        <a href="/comicteca/about/">About</a><br />
 	<a href="/comicteca/add_artist/">Add a New Artist</a><br />
+	<a href="/comicteca/add_colection/">Add a New Colection</a><br />
     </body>
 </html>
