Add new template for "add_publisher" view and insert link in main index

--- a/comicteca/templates/comics/index.html
+++ b/comicteca/templates/comics/index.html
@@ -44,5 +44,6 @@
         <a href="/comicteca/about/">About</a><br />
 	<a href="/comicteca/add_artist/">Add a New Artist</a><br />
 	<a href="/comicteca/add_colection/">Add a New Colection</a><br />
+	<a href="/comicteca/add_publisher/">Add a New Publisher</a><br />
     </body>
 </html>
