Check for errors in the "add_collection" template

--- a/comicteca/templates/comics/add_colection.html
+++ b/comicteca/templates/comics/add_colection.html
@@ -23,6 +23,19 @@
 
             <input type="submit" name="submit" value="Add Colection" />
         </form>
+        {% if form.errors %}
+            {% for field in form %}
+                {% for error in field.errors %}
+                    <p> {{ errors }} </p>
+                {% endfor %}
+            {% endfor %}
+
+            {% for error in form.non_field_errors %}
+                <p></p>
+                <p> {{ error }} </p>
+                <p></p>
+            {% endfor %}
+        {% endif %}
     </body>
 
 </html>
