--- a/comicteca/templates/comics/artist.html
+++ b/comicteca/templates/comics/artist.html
@@ -20,5 +20,6 @@
         {% else %}
             The Artist {{ artist_name }} does not exist!
         {% endif %}
+    <a href="/comicteca/artists/{{ artist.slug }}/edit/">Edit information about this Artist NEW+++</a><br />
     </body>
 </html>
