--- a/comicteca/templates/comics/index.html
+++ b/comicteca/templates/comics/index.html
@@ -42,8 +42,10 @@
 
 	<hr>
         <a href="/comicteca/about/">About</a><br />
-	<a href="/comicteca/add_artist/">Add a New Artist</a><br />
+	<a href="/comicteca/add_artist/">Add a New Artist (OLD)</a><br />
+    <a href="/comicteca/artists/add/">Add a New Artist NEW+++</a><br />
 	<a href="/comicteca/add_colection/">Add a New Colection</a><br />
+    <a href="/comicteca/colections/add/">Add a New Coleccion NEW+++</a><br />
 	<a href="/comicteca/add_publisher/">Add a New Publisher</a><br />
     </body>
 </html>
