--- a/comicteca/templates/comics/index.html
+++ b/comicteca/templates/comics/index.html
@@ -42,9 +42,8 @@
 
 	<hr>
         <a href="/comicteca/artists/">Artists</a><br />
+        <a href="/comicteca/colections/">Colections</a><br />
         <a href="/comicteca/about/">About</a><br />
-	<a href="/comicteca/add_colection/">Add a New Colection</a><br />
-    <a href="/comicteca/colections/add/">Add a New Coleccion NEW+++</a><br />
 	<a href="/comicteca/add_publisher/">Add a New Publisher</a><br />
     </body>
 </html>
