--- a/comicteca/templates/comics/index.html
+++ b/comicteca/templates/comics/index.html
@@ -43,7 +43,7 @@
 	<hr>
         <a href="/comicteca/artists/">Artists</a><br />
         <a href="/comicteca/colections/">Colections</a><br />
+        <a href="/comicteca/publishers/">Publishers</a><br />
         <a href="/comicteca/about/">About</a><br />
-	<a href="/comicteca/add_publisher/">Add a New Publisher</a><br />
     </body>
 </html>
