--- a/comicteca/templates/comics/add_publisher.html
+++ b/comicteca/templates/comics/add_publisher.html
@@ -16,7 +16,13 @@
 
             {% for field in form.visible_fields %}
                 {{ field.errors }}
-                {{ field.help_text }}
+
+                {% if form.help_text %}
+                    {{ field.help_text }}
+                {% else %}
+                    {{ field.name }}
+                {% endif %}
+
                 {{ field }}
 		</br>
             {% endfor %}
