Show "colection.colection_type" in index page

--- a/comicteca/templates/comics/index.html
+++ b/comicteca/templates/comics/index.html
@@ -26,6 +26,7 @@
                   (v{{ colection.volume }})
                   ({{ colection.distributor }})
                   ({{ colection.colection_list }})
+                  ({{ colection.colection_type }})
                   </li>
                 {% endfor %}
             </ul>
