Show "colection.colection_type" in Colection template

--- a/comicteca/templates/comics/colection.html
+++ b/comicteca/templates/comics/colection.html
@@ -14,6 +14,7 @@
 	           {% endif  %}
 	           <li><u>Volume:</u><strong>{{ colection.volume }} </strong></li>
 	           <li><u>Status:</u><strong>{{ colection.colection_list }} </strong></li>
+               <li><u>Type:</u><strong>{{ colection.colection_type }} </strong></li>
 	           <li><u>Pub Date:</u><strong>{{ colection.pub_date }} </strong></li>
 	           </br>
 	        </ul>
