--- a/comicteca/templates/comics/comic_list.html
+++ b/comicteca/templates/comics/comic_list.html
@@ -1,48 +1,49 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Comicteca</title>
-    </head>
+{% extends 'comics/base.html' %}
 
-    <body>
+{% load staticfiles %}
 
-        <h2><u>Comic List</u> ({{ total_comics }})</h2>
-        {% if object_list %}
-	          <table>
-		        <tr>
-              <th>Comic</th>
-     		      <th>Distributor</th>
-              <th>Editors</th>
-     		      <th>Pages</th>
-              <th>Language</th>
-     		      <th>Pub Date</th>
-		        </tr>
-            {% for comic in object_list %}
-		    <tr>
-	            <td><a href="/comicteca/comics/{{ comic.slug }}/">{{ comic.colection.name }}
-	               (v{{ comic.colection.volume }}) n{{ comic.number }}</a>
-                </td>
-                <td>{{ comic.colection.distributor }}</td>
-                <td>{{ comic.colection.editor_list }}</td>
-                <td>{{ comic.pages }}</td>
-	              <td>{{ comic.colection.language }}</td>
+{% block title %}Comicteca Comic List{% endblock %}
 
-		      {% if comic.colection.pub_date %}
-		        <td>{{ comic.colection.pub_date }}</td>
-		      {% else %}
-		        <td>N/A</td>
-		      {% endif %}
-		    </tr>
-                {% endfor %}
-            </table>
-        {% else %}
-            <strong>There are no comics present yet.</strong>
-        {% endif %}
+{% block side_block %}
+<p>Search Comic List</p>
+<p><a href="/comicteca/comics/add/">Add new Comic</a></p>
+<a href="{{ artist.get_absolute_url }}">{{ artist }}</a>
+
+{% endblock %}
+
+{% block body_block %}
+
+<h2><u>Comic List</u> ({{ total_comics }})</h2>
+{% if object_list %}
+  <table>
+    <tr>
+      <th>Comic</th>
+     	<th>Distributor</th>
+      <th>Editors</th>
+     	<th>Pages</th>
+      <th>Language</th>
+     	<th>Pub Date</th>
+		</tr>
+    {% for comic in object_list %}
+    <tr>
+	    <td><a href="{{ comic.get_absolute_url }}">{{ comic.colection.name }}
+	               (v{{ comic.colection.volume }}) n{{ comic.number }}</a></td>
+      <td>{{ comic.colection.distributor }}</td>
+      <td>{{ comic.colection.editor_list }}</td>
+      <td>{{ comic.pages }}</td>
+	    <td>{{ comic.colection.language }}</td>
+
+		  {% if comic.colection.pub_date %}
+		    <td>{{ comic.colection.pub_date }}</td>
+		  {% else %}
+		    <td>N/A</td>
+		  {% endif %}
+		</tr>
+    {% endfor %}
+  </table>
+{% else %}
+  <strong>There are no comics present yet.</strong>
+{% endif %}
 
 
-        <hr>
-        <br/>
-        <a href="/comicteca/comics/add/">Add new Comic</a><br />
-        <a href="/comicteca/">Back to Index</a>
-    </body>
-</html>
+{% endblock %}
