--- a/comicteca/templates/comics/colection.html
+++ b/comicteca/templates/comics/colection.html
@@ -1,53 +1,58 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Comicteca - Colections</title>
-    </head>
+{% extends 'comics/base.html' %}
 
-    <body>
-        {% if colection %}
-        <h1>{{ colection_name }} v{{ colection.volume }} ({{ colection.distributor }}) </h1>
-             <ul>
-	           <li><u>Name:</u><strong>{{ colection.name }} </strong></li>
-	           {% if colection.subname  %}
-	               <li><u>Subname:</u><strong>{{ colection.subname }} </strong></li>
-	           {% endif  %}
-	           <li><u>Volume:</u><strong>{{ colection.volume }} </strong></li>
-	           <li><u>Status:</u><strong>{{ colection.colection_list }} </strong></li>
-               <li><u>Type:</u><strong>{{ colection.colection_type }} </strong></li>
-	           <li><u>Pub Date:</u><strong>{{ colection.pub_date }} </strong></li>
-	           </br>
-	        </ul>
+{% load staticfiles %}
 
-	    <h2>Distributor</h2>
-	        <ul>
-                <li><a href="/comicteca/publishers/{{ distributor.slug }}">{{ distributor.name }}</a></li>
-	       </ul>
+{% block title %}Comicteca Comic List{% endblock %}
 
-	    <h2>Editors</h2>
-            <ul>
-	            {% for editor in editor_list %}
-                    <li><a href="/comicteca/publishers/{{ editor.slug }}">{{ editor.name }}</a></li>
-                {% endfor %}
-            </ul>
+{% block side_block %}
+  <p>Search Comic List</p>
+{% endblock %}
 
-        <h2>Comics</h2> <a href="/comicteca/colections/{{ colection.slug }}/add-comic/">Add Comic</a><br/>
-            <ul>
-                {% for comic in comic_list %}
-                    <li><a href="/comicteca/comics/{{ comic.slug }}/">Number {{ comic.number }} ({{ comic.pages }})</a></li>
-                {% endfor %}
-            </ul>
+{% block body_block %}
+  {% if colection %}
+    <h1>{{ colection_name }} v{{ colection.volume }} ({{ colection.distributor }}) </h1>
+        <ul>
+	        <li><u>Name:</u><strong>{{ colection.name }} </strong></li>
+	        {% if colection.subname  %}
+	            <li><u>Subname:</u><strong>{{ colection.subname }} </strong></li>
+	        {% endif  %}
+	        <li><u>Volume:</u><strong>{{ colection.volume }} </strong></li>
+	        <li><u>Status:</u><strong>{{ colection.colection_list }} </strong></li>
+            <li><u>Type:</u><strong>{{ colection.colection_type }} </strong></li>
+	        <li><u>Pub Date:</u><strong>{{ colection.pub_date }} </strong></li>
+	        </br>
+	    </ul>
 
-        {% else %}
-            <h1>Colection Unknown</h1>
-            This colection does not exist!
-        {% endif %}
-	    <hr>
-        {% if colection %}
-            <a href="/comicteca/colections/{{ colection.slug }}/edit/">Edit Colection</a><br/>
-            <a href="/comicteca/colections/{{ colection.slug }}/delete/">Delete Colection</a><br/>
-        {% endif %}
-	    <a href="/comicteca/colections/">Back to Colections</a><br/>
-	    <a href="/comicteca/">Back to Index</a><br/>
-    </body>
-</html>
+    <h2>Distributor</h2>
+	    <ul>
+            <li><a href="/comicteca/publishers/{{ distributor.slug }}">{{ distributor.name }}</a></li>
+	    </ul>
+
+	<h2>Editors</h2>
+      <ul>
+	    {% for editor in editor_list %}
+          <li><a href="/comicteca/publishers/{{ editor.slug }}">{{ editor.name }}</a></li>
+        {% endfor %}
+      </ul>
+
+    <h2>Comics</h2> <a href="/comicteca/colections/{{ colection.slug }}/add-comic/">Add Comic</a><br/>
+      <ul>
+        {% for comic in comic_list %}
+          <li><a href="/comicteca/comics/{{ comic.slug }}/">Number {{ comic.number }} ({{ comic.pages }})</a></li>
+        {% endfor %}
+      </ul>
+
+  {% else %}
+    <h1>Colection Unknown</h1>
+      This colection does not exist!
+  {% endif %}
+
+  <hr>
+  {% if colection %}
+    <a href="/comicteca/colections/{{ colection.slug }}/edit/">Edit Colection</a><br/>
+    <a href="/comicteca/colections/{{ colection.slug }}/delete/">Delete Colection</a><br/>
+  {% endif %}
+    <a href="/comicteca/colections/">Back to Colections</a><br/>
+	<a href="/comicteca/">Back to Index</a><br/>
+
+{% endblock %}
