--- a/comicteca/templates/comics/colection_list.html
+++ b/comicteca/templates/comics/colection_list.html
@@ -1,47 +1,49 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Comicteca</title>
-    </head>
+{% extends 'comics/base.html' %}
 
-    <body>
+{% load staticfiles %}
 
-        <h2><p>Listado de Colecciones:</p></h2>
-        {% if colection_list %}
+{% block title %}Comicteca Colection List{% endblock %}
+
+{% block side_block %}
+  <p>Search Comic List</p>
+{% endblock %}
+
+{% block body_block %}
+  <h2><u>Colections List</u></h2>
+    {% if colection_list %}
 	    <table>
 		    <tr>
-     		      <th>Name</th>
-     		      <th>Volume</th>
-                  <th>Distributor</th>
-                  <th>Language</th>
-     		      <th>Pub Date</th>
-     		      <th>Numbers</th>
+     		  <th>Name</th>
+     		  <th>Volume</th>
+          <th>Distributor</th>
+          <th>Language</th>
+     		  <th>Pub Date</th>
+     		  <th>Numbers</th>
 		    </tr>
-                {% for colection in colection_list %}
+      {% for colection in colection_list %}
 		    <tr>
-	              <td><a href="/comicteca/colections/{{ colection.slug }}">{{ colection.name }}</a></td>
-	              <td>v{{ colection.volume }}</td>
-                  <td><a href="/comicteca/publishers/{{ colection.distributor.slug }}">{{ colection.distributor.name }}</a></td>
-                  <td>{{ colection.language }}</td>
-		          {% if colection.pub_date %}
-		              <td>{{ colection.pub_date }}</td>
-		          {% else %}
-		              <td>N/A</td>
-		          {% endif %}
+	        <td><a href="/comicteca/colections/{{ colection.slug }}">{{ colection.name }}</a></td>
+	        <td>v{{ colection.volume }}</td>
+          <td><a href="/comicteca/publishers/{{ colection.distributor.slug }}">{{ colection.distributor.name }}</a></td>
+          <td>{{ colection.language }}</td>
 
-		          <td>{{ colection.colection_list }}</td>
+		      {% if colection.pub_date %}
+		        <td>{{ colection.pub_date }}</td>
+		      {% else %}
+		        <td>N/A</td>
+		      {% endif %}
 
+		      <td>{{ colection.colection_list }}</td>
 		    </tr>
-                {% endfor %}
-            </table>
-        {% else %}
-            <strong>There are no colections present yet.</strong>
-        {% endif %}
+      {% endfor %}
+    </table>
+    {% else %}
+      <strong>There are no colections present yet.</strong>
+    {% endif %}
 
+    <hr>
+    <br/>
+    <a href="/comicteca/colections/add/">Add new colection</a><br />
+    <a href="/comicteca/">Back to Index</a>
 
-        <hr>
-        <br/>
-        <a href="/comicteca/colections/add/">Add new colection</a><br />
-        <a href="/comicteca/">Back to Index</a>
-    </body>
-</html>
+{% endblock %}
