--- a/comicteca/templates/comics/artist.html
+++ b/comicteca/templates/comics/artist.html
@@ -15,6 +15,11 @@
 {% block body_block %}
   {% if artist %}
   <h1>{{ artist_name }}</h1>
+
+    {% if artist.image %}
+      <img src="{{ MEDIA_URL }}{{ artist.image }}" class="img-rounded" alt="Picture of {{ artist.name }}">
+    {% endif %}
+
 	  <ul>
 	    <li><u>Name:</u> <strong>{{ artist.name }} </strong></li>
 	    <li><u>Nationality:</u> <strong>{{ artist.nationality }} </strong></li>
